# codTech

./: File Management Tool  Multithreaded File Compression Tool  README.md  SimpleCompiler.cpp
SnakeGame/: CMakeLists.txt
SnakeGame/assets/levels/: level1
SnakeGame/headers/: SnakeSection.hpp  apple.hpp  engine.hpp  wall.hpp
SnakeGame/src/: SnakeSection.cpp  apple.cpp  draw.cpp  engine.cpp  input.cpp  update.cpp  wall.cpp
